fix: removing double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #app, #app>div, #root {
-  height: 100%
+html{
+  overflow-x: hidden;
 }
 
 .home-image{
